c2rust-transpile/tests/snapshots/snapshots__transpile@gotos.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/gotos.rs
input_file: c2rust-transpile/tests/snapshots/gotos.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn sum(mut count: core::ffi::c_int) -> core::ffi::c_int {
    let mut x: core::ffi::c_int = 0 as core::ffi::c_int;
    while !(count <= 0 as core::ffi::c_int) {
        x += count;
        count -= 1;
    }
    return x;
}
